--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
             <ul>
                  
               <li class="transition">
-                    <a href="{{ '' | prepend: site.baseurl }}" {% if current[1] == "about" %} class="active"{% endif %} >Home</a>
+                    <a href="{{ '/about' | prepend: site.baseurl }}"{% if current[1] == "project" %} class="active"{% endif %} >Home</a>
                 </li>
               
                 <li class="transition">
@@ -23,7 +23,7 @@
                     <a href="{{ '/book' | prepend: site.baseurl }}" {% if current[1] == "book" %} class="active"{% endif %} >Book</a>
                 </li>
                <li class="transition">
-                    <a href="{{ '/about' | prepend: site.baseurl }}" {% if current[1] == "about" or current[1] == "blog" or current[1] == "book" or current[1] == "project" %} class="normal" {% endif %} class="active">About</a>
+                    < a href="{{ '' | prepend: site.baseurl }}" {% if current[1] == "about" %} class="active"{% endif %} >About</a>
                 </li>
             
             </ul>
