--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
         <div class="nav-container">
             <ul>
                 <li class="transition">
-                    <a href="{{ '/about' | prepend: site.baseurl }}/" {% if current[1] == "about" or current[1] == "blog" or current[1] == "book" or current[1] == "project" %} class="normal" {% endif %} class="active">Home</a>
+                    <a href="{{ '/about' | prepend: site.baseurl }}/" {% if current[1] == "about" %} class="normal" {% endif %} class="active">Home</a>
                 </li>
               
                 <li class="transition">
