--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
         <div class="nav-container">
             <ul>
                 <li class="transition">
-                    <a href="{{ '/about' | prepend: site.baseurl }}/" {% if current[1] == "about"  or current[1] == "blog" or current[1] == "book" or current[1] == "project" %} class="nomal"{% endif %} class="active">Home</a>
+                    <a href="{{ '/about' | prepend: site.baseurl }}/" {% if current[1] == "about"  or current[1] == "blog" or current[1] == "book" or current[1] == "project" %} class="nomal"{% endif %}>Home</a>
               </li>
                 <li class="transition">
                     <a href="{{ '/project' | prepend: site.baseurl }}" {% if current[1] == "project" %} class="active"{% endif %} >Project</a>
