--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,9 @@
                 <li class="transition">
                     <a href="{{ '/book' | prepend: site.baseurl }}" {% if current[1] == "book" %} class="active"{% endif %} >Book</a>
                 </li>
-             
+             <li class="transition">
+                    <a href="{{ '' | prepend: site.baseurl }}/" {% if current[1] == "about" or current[1] == "blog" or current[1] == "book" or current[1] == "project" %} class="normal" {% endif %} class="active">About</a>
+                </li>
               
             </ul>
         </div>
