--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
     <address class="footer_wrap">
         <div class="information">
             <div class="myname">
-                Jihye Leee
+                Yeji Kim
             </div>
-            <a href="mailto:iam.leejihye@gmail.com" class="email">
-                iam.leejihye@gmail.com
+            <a href="mailto:yz6242@gmail.com" class="email">
+                yz6242@gmail.com
             </a>
             <div class="accounts">
                 <a href="http://dribbble.com/iamleejihye" target="_blank" class="transition">
