--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -5,7 +5,7 @@
             <span class="label-emoji">
                 &#x1F64B;
             </span>    
-            &nbsp; I've worked for
+            &nbsp; Education & Work Experience
         </p>
     </div>
     <ul>
@@ -30,7 +30,7 @@
             <span class="label-emoji">
                 &#x1F4AA;
             </span>
-            &nbsp; Available My Skill & Role
+            &nbsp; Available Skill & Role
         </p>
     </div>    
     <ul>
