--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,18 +18,7 @@
                     c0.9,2.2,0.3,3.9,0.2,4.3c1,1.1,1.7,2.6,1.7,4.4c0,6.3-3.8,7.6-7.4,8c0.6,0.5,1.1,1.5,1.1,3c0,2.2,0,3.9,0,4.5
                     c0,0.4,0.3,0.9,1.1,0.8c6.5-2.2,11.1-8.3,11.1-15.5C32.6,7.3,25.3,0,16.3,0z"></path>
                     </svg>
-                </a>
-                <a href="http://www.linkedin.com/in/jihyeleee/" target="_blank" class="transition">
-                    <svg viewBox="0 0 38.3 38.3">
-                        <g>
-                        <rect x="0.8" y="12.8" width="7.9" height="25.5"></rect>
-                        <ellipse cx="4.7" cy="4.7" rx="4.7" ry="4.7"></ellipse>
-                        <path d="M21.3,24.9c0-3.6,1.7-5.7,4.8-5.7c2.9,0,4.3,2.1,4.3,5.7c0,3.7,0,13.4,0,13.4h7.9c0,0,0-9.3,0-16.2
-                        c0-6.8-3.9-10.1-9.3-10.1s-7.7,4.2-7.7,4.2v-3.4h-7.6v25.5h7.6C21.3,38.3,21.3,28.8,21.3,24.9z"></path>
-                            </g>
-                    </svg>
-                </a>
-                <a href="http://instagram.com/writeveryday" target="_blank" class="transition">
+                <a href="https://www.instagram.com/yz6242/" target="_blank" class="transition">
                     <svg viewBox="0 0 40.2 40.3">
                     <g>
                     <path d="M20.2,3.6c5.4,0,6,0,8.2,0.1c2,0.1,3,0.4,3.7,0.7C33,4.8,33.7,5.3,34.4,6s1.1,1.4,1.5,2.3
@@ -47,7 +36,7 @@
                     </g>
                 </svg>
                 </a>
-                <a href="http://twitter.com/playpingpong" target="_blank" class="transition">
+                <a href="https://www.facebook.com/yeji.kim.58173000" target="_blank" class="transition">
                     <svg viewBox="0 0 40.7 33.1">
                 <path d="M0,29.3c3.7,2.4,8.1,3.8,12.8,3.8c15.5,0,24.3-13.1,23.7-24.8c1.6-1.2,3-2.6,4.2-4.3
                 c-1.5,0.7-3.1,1.1-4.8,1.3c1.7-1,3-2.7,3.7-4.6c-1.6,1-3.4,1.7-5.3,2C32.7,1,30.6,0,28.2,0c-5.4,0-9.4,5-8.1,10.3
