--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -17,7 +17,7 @@ div.resume-info {
 
     svg {
         width: 24px;
-        fill: $purple;
+        fill: $bule;
         position: absolute;
     }
 }
@@ -89,7 +89,7 @@ div.resume-info {
 section.skill {
     svg {
         width: 24px;
-        fill: $purple;
+        fill: $bule;
         position: absolute;
     }
     padding-bottom: 72px;
