--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -22,6 +22,7 @@ $shadow-color: rgba(0, 0, 0, .2);
 $ridi-blue: #1f8ce6;
 $ridi-skyblue: #66baff;
 $purple: #8565fc;
+$bule: #54d7d4;
 $light-purple: #997EFA;
 
 // media
