--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -21,7 +21,7 @@ $yellow: #FEE85A;
 $shadow-color: rgba(0, 0, 0, .2);
 $ridi-blue: #1f8ce6;
 $ridi-skyblue: #66baff;
-$purple: #8565fc;
+$purple: #54d7d4;
 $blue: #54d7d4;
 $light-purple: #997EFA;
 
