--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -21,8 +21,8 @@ $yellow: #FEE85A;
 $shadow-color: rgba(0, 0, 0, .2);
 $ridi-blue: #1f8ce6;
 $ridi-skyblue: #66baff;
-$purple: #54d7d4;
-$blue: #54d7d4;
+$purple: #00c8ff;
+$blue: #00c8ff;
 $light-purple: #997EFA;
 
 // media
