--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,11 +38,9 @@
                 </a>
                 <a href="https://www.facebook.com/yeji.kim.58173000" target="_blank" class="transition">
                     <svg viewBox="0 0 40.7 33.1">
-                <path d="M0,29.3c3.7,2.4,8.1,3.8,12.8,3.8c15.5,0,24.3-13.1,23.7-24.8c1.6-1.2,3-2.6,4.2-4.3
-                c-1.5,0.7-3.1,1.1-4.8,1.3c1.7-1,3-2.7,3.7-4.6c-1.6,1-3.4,1.7-5.3,2C32.7,1,30.6,0,28.2,0c-5.4,0-9.4,5-8.1,10.3
-                C13.1,9.9,7,6.6,2.8,1.5c-2.2,3.8-1.1,8.7,2.6,11.1c-1.4,0-2.7-0.4-3.8-1c-0.1,3.9,2.7,7.5,6.7,8.3c-1.2,0.3-2.5,0.4-3.8,0.1
-                c1.1,3.3,4.1,5.7,7.8,5.8C8.9,28.6,4.4,29.8,0,29.3z"></path>
+                <path d="M40,0H10C4.486,0,0,4.486,0,10v30c0,5.514,4.486,10,10,10h30c5.514,0,10-4.486,10-10V10C50,4.486,45.514,0,40,0z M39,17h-3 c-2.145,0-3,0.504-3,2v3h6l-1,6h-5v20h-7V28h-3v-6h3v-3c0-4.677,1.581-8,7-8c2.902,0,6,1,6,1V17z"></path></svg>
                 </svg>
+                   
                 </a>
             </div>
         </div>
