--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
         <div class="nav-container">
             <ul>
               <li class="transition">
-                    <a href="{{ '/about' | prepend: site.baseurl }}" {% if current[1] == "about" %} class="active"{% endif %} >Home</a>
+                    <a href="{{ '/home' | prepend: site.baseurl }}" {% if current[1] == "home" %} class="active"{% endif %} >Home</a>
                 </li>
               <li class="transition">
                     <a href="{{ '' | prepend: site.baseurl }}" {% if current[1] == "" %} class="active"{% endif %}> About</a>
