--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
                     <a href="{{ '/home' | prepend: site.baseurl }}" {% if current[1] == "home" %} class="active"{% endif %} >Home</a>
                 </li>
               <li class="transition">
-                    <a href="{{ '' | prepend: site.baseurl }}" {% if current[1] == "" %} class="active"{% endif %}> About</a>
+                    <a href="{{ '/about' | prepend: site.baseurl }}" {% if current[1] == "about" %} class="active"{% endif %}> About</a>
               </li>  
         
                 <li class="transition">
