--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,9 @@
                 <li class="transition">
                     <a href="{{ '/blog' | prepend: site.baseurl }}" {% if current[1] == "blog" %} class="active"{% endif %} >Blog</a>
                 </li>
+                <li class="transition">
+                    <a href="{{ '' | prepend: site.baseurl }}" {% if current[1] == "" %} {% if current[1] == "about" or current[1] == "blog" or current[1] == "project" %} class="normal" {% endif %} class="active"> About</a>
+              </li>  
                               
             </ul>
         </div>
