--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
                     <a href="{{ '/home' | prepend: site.baseurl }}" {% if current[1] == "home" %} class="active"{% endif %} >Home</a>
                 </li>
               <li class="transition">
-                    <a href="{{ '/about' | prepend: site.baseurl }}" {% if current[1] == "about" %} class="active"{% endif %}> About</a>
+                    <a href="{{ '/' | prepend: site.baseurl }}" {% if current[1] == "about" or current[1] == "blog" or current[1] == "project" %} class="normal" {% endif %} class="active"> About</a>
               </li>  
         
                 <li class="transition">
@@ -21,9 +21,7 @@
                 <li class="transition">
                     <a href="{{ '/blog' | prepend: site.baseurl }}" {% if current[1] == "blog" %} class="active"{% endif %} >Blog</a>
                 </li>
-                <li class="transition">
-                    <a href="{{ '' | prepend: site.baseurl }}" {% if current[1] == "" %} {% if current[1] == "about" or current[1] == "blog" or current[1] == "project" %} class="normal" {% endif %} class="active"> About</a>
-              </li>  
+              
                               
             </ul>
         </div>
