--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
                     <a href="{{ '/home' | prepend: site.baseurl }}" {% if current[1] == "home" %} class="active"{% endif %} >Home</a>
                 </li>
               <li class="transition">
-                    <a href="{{ '' | prepend: site.baseurl }} or {{ '/about' | prepend: site.baseurl }}" {% if current[1] == "home" or current[1] == "blog" or current[1] == "project" %} class="normal" {% endif %} class="active"> About</a>
+                    <a href="{{ '' | prepend: site.baseurl }}" or "{{ '/about' | prepend: site.baseurl }}" {% if current[1] == "home" or current[1] == "blog" or current[1] == "project" %} class="normal" {% endif %} class="active"> About</a>
               </li>  
                 <li class="transition">
                     <a href="{{ '/project' | prepend: site.baseurl }}" {% if current[1] == "project" %} class="active"{% endif %} >Project</a>
