--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,9 @@
                 <li class="transition">
                     <a href="{{ '/project' | prepend: site.baseurl }}" {% if current[1] == "project" %} class="active"{% endif %} >Project</a>
                 </li>
-                <li class="transition">
+<!--                 <li class="transition">
                     <a href="{{ '/blog' | prepend: site.baseurl }}" {% if current[1] == "blog" %} class="active"{% endif %} >Blog</a>
-                </li>
+                </li> -->
                
                               
             </ul>
