--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -6,6 +6,12 @@
                 &#x1F64B;
             </span>    
             &nbsp; Education & Work Experience
+                <a href="img/resume.pdf" 
+                   class="resume-download transition" 
+                   target="_blank" 
+                   download>
+                   📄 Download Resume
+                </a>
         </p>
     </div>
     <ul>
