--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -6,7 +6,7 @@
                 &#x1F64B;
             </span>    
             &nbsp; Education & Work Experience
-                <a href="img/Yeji_CV 2025_Fall.pdf" 
+                <a href="../img/Yeji_CV 2025_Fall.pdf" 
                    class="resume-download transition" 
                    target="_blank" 
                    download>
